<resources>
    <string name="app_name">Wowhubb</string>
    <string name="fillthecoutrytext">Fill the details</string>
    <string name="filltheotptext">Fill the OTP details</string>
    <string name="fillthelogin">Fill the Login details</string>
    <string name="resendotp">Resend OTP?</string>
    <string name="filltheforgot">Fill the Credentials</string>
    <string name="filltheregtext">Fill the Register details</string>
    <string name="fillthebdaytext">Fill the details</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="splashone"><![CDATA[Create Share & Advertise your \nPersonal/ Professional Event\n In an Outstanding Way]]></string>
    <string name="splashtwo"><![CDATA[Search & Book your \n Next Event Venue]]></string>
    <string name="splashothree"><![CDATA[Search & Hire your Next \nEvent Service Professional]]></string>
    <string name="selectinterest">Select 2 or 3 Interests</string>
    <string name="bne">BUSINESS NETWORKING EVENTS</string>
    <string name="bne_interest">Business Networking Events</string>
    <string name="pte_interest">Professional Training Events</string>
    <string name="ste_interest">Startup Technology Events</string>
    <string name="empty" translatable="false" />
    <string name="socialevents"><![CDATA[SOCIAL & LEISURE EVENTS]]></string>
    <string name="comedy"><![CDATA[Comedy-talk Shows $ Events]]></string>
    <string name="filmfashion"><![CDATA[Media Film Fashion & Culture Events]]></string>
    <string name="homelife">Homelife \nStyles</string>
    <string name="hobbies">Hobbies</string>
    <string name="musicarts">Music Arts</string>
    <string name="parties">Parties</string>
    <string name="relegion"><![CDATA[RELIGION - SPIRTUALITY & COMMUNITY EVENTS]]></string>
    <string name="healthsub"><![CDATA[HEALTH WELLNESS & SPORTS EVENTS]]></string>
    <string name="relegionspirtual">Religion \nSpirtuality</string>
    <string name="charity"><![CDATA[Charity Cause & Community Events]]></string>
    <string name="familyedu">Family \nEducation</string>
    <string name="fooddrink">Food Drink</string>
    <string name="wellness">Wellness Fitness</string>
    <string name="sports">Sports Events</string>
    <string name="travelevents"><![CDATA[TRAVEL & OUTDOOR EVENTS]]></string>
    <string name="educationevents"><![CDATA[EDUCATION GOVERNMENT & POLITICS]]></string>
    <string name="traveltours"><![CDATA[Travel Tours & Vacation Spots]]></string>
    <string name="autobars"><![CDATA[Auto Boats & \nAir]]></string>
    <string name="holidayevents"> Holiday \nEvents</string>
    <string name="schoolevents">School Events</string>
    <string name="govtevents">Govt Events</string>
    <string name="politicalevents">Political Events</string>
    <string name="createevents">Create Event</string>
    <string name="creatyourevent">Create Your Event - </string>
    <string name="wowtag">!Wowtag</string>
    <string name="eventname">Event Title</string>
    <string name="Runtime">Runtime</string>
    <string name="wowtagvideo">Wowtag Video</string>
    <string name="covertag">Cover Page</string>
    <string name="Eventhighlights">Event Highlights(Video/Image)</string>
    <string name="Eventdate"><![CDATA[Event date & Time]]></string>
    <string name="speaker">Speaker</string>
    <string name="From"><![CDATA[Event Start Date & Time]]></string>
    <string name="To"><![CDATA[Event End Date & Time]]></string>
    <string name="rspv">RSVP</string>
    <string name="learnmore">Learn More</string>
    <string name="booknow">Book Now</string>
    <string name="register">Register</string>
    <string name="interested">Interested</string>
    <string name="attending">Attending</string>
    <string name="highlight">Highlights</string>
    <string name="eventswillshow">Your Events will Show here</string>
    <string name="item_1">My Network</string>
    <string name="item_2">Contacts</string>
    <string name="item_3">Add Contact</string>
    <string name="contact_txt">We may periodically sync and store your contacts to faciltate a continuous connection between you and your network members you are always going to choose who you invite and conect with</string>
    <string name="add_contact">+ Add Contact</string>
    <string name="Todayevent"><u>Today Events</u></string>
    <string name="Tomorrowevent"><u>Tomorrow Events</u></string>
    <string name="EventHistory"><u>Event History</u></string>
    <string name="Date">Date</string>
    <string name="guestsize">Guest Size</string>
    <string name="searchevent_land"><![CDATA[Search & Book your Event Venue]]></string>
    <string name="nearbyevents">Search for Nearby Events</string>
    <string name="searchevent_providers">Search for Event Service Providers</string>
    <string name="createevents_land">Create an Event</string>
    <string name="personal">Personal Profile</string>
    <string name="addmore">+ Add More</string>
    <string name="Ok">OK</string>
    <string name="name">Segun Devis</string>
    <string name="uploadpic">Upolad Pics</string>
    <string name="newcoverpage">New Cover Page</string>
    <string name="changephoto">Change Photo</string>
    <string name="uploadvideo">Upload Self Intro Video</string>
    <string name="browse">Browse</string>
    <string name="save">Save</string>
    <string name="edit_wowtag"><u>Edit Wowtag Video</u></string>
    <string name="Personal">Personal</string>
    <string name="Professional">Professional</string>
    <string name="connection">102 Connections</string>
    <string name="vieweventfeed">View Event Feed</string>
    <string name="Personalprofile">Personal Profile</string>
    <string name="Personalprofileedit">Edit Cover Page</string>
    <string name="img_profile">Profile</string>
    <string name="img_coverprofile">Cover Picture</string>
    <string-array name="stepLabels">
        <item>Event Details</item>
        <item>!Wowtag</item>
        <item>Event Venue</item>
        <item>Program Schedule</item>
        <item>Event Highlights</item>
        <item>Event Contact/URL Links</item>

    </string-array>
    <string-array name="quickstepLabels">
        <item>Event Details</item>
        <item>!Wowtag</item>
        <item>Event Venue</item>
        <item>Event Contact/URL Links</item>

    </string-array>
    <string-array name="switch_data">
        <item>Miles</item>
        <item>Kilometers</item>


    </string-array>
    <string-array name="miles_data">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20 Miles</item>
        <item>25 Miles</item>
        <item>50 Miles</item>
        <item>100 Miles</item>
    </string-array>
    <string-array name="kilometer_data">
        <item>5 Kms</item>
        <item>10 Kms</item>
        <item>15 Kms</item>
        <item>20 Kms</item>
        <item>25 Kms</item>
        <item>50 Kms</item>
        <item>100 Kms</item>
    </string-array>
    <string-array name="sortby">
        <item>Most Popular</item>
        <item>Distance</item>
        <item>Best Reviews</item>

    </string-array>
        <string name="pin_content_desc">PIN input field</string>
        <string name="pin_label_text">PIN</string>
    <string name="search_result">Search Result!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>
    <string name="publish"><![CDATA[Publish & Share On My Wowhubb Network]]></string>
    <string name="wownw1">\@#coll group</string>
    <string name="wownw2"><![CDATA[Eventzz%&]]></string>
    <string name="networkError">Network Error! Please Try Again Later.</string>
    <string name="file_provider_authority" translatable="false">com.quiro.fileproviderexample.fileprovider</string>
    <string name="timeslot">Timeslot is Empty</string>
    <string name="underdev">Under Development</string>
    <string name="venueempty">Venues is Empty</string>
    <string name="cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="event_service">Venues - Service Provider</string>
    <string name="categoryError">Empty Category! Please Select any Category.</string>
    <string name="wowtagfrom">Run Date From</string>
    <string name="wowtagto">Run Date To</string>
    <string name="clear_filter"><u>Clear Filters</u></string>
    <string name="ginacakes"><u>www.ginacakes.com</u></string>
    <string name="ginacakes1">www.amazingbakery.com</string>
    <string name="visit_page"><u>Visit Page</u></string>
    <string name="ticketlink"><u>www.travelplace.com</u></string>
    <string name="nearbyevent">Near by Events</string>
    <string name="search_book">Search &amp; Book Events</string>
    <string name="privacy">Privacy</string>
    <string name="chatsettings">Chats Settings</string>
    <string name="videos"><![CDATA[Videos & Photos]]></string>
    <string name="sounds">Sounds</string>
    <string name="language">Language</string>
    <string name="loginsecurity">Login Security</string>
    <string name="notifications">Notifications</string>
    <string name="emailnotification">Email Notifications</string>
    <string name="phone">Phone</string>
    <string name="eventfeed">Event Feed</string>
    <string name="group">Group</string>
    <string name="coupons">Coupons</string>
    <string name="network">Network</string>
    <string name="managefeedpost">Manage Event Feed Post</string>
    <string name="manageprofile">Manage Profile</string>
    <string name="managecoupons">Manage Coupons</string>
    <string name="managefriendlist">Manage Friend List</string>
    <string name="quickhint">Create a quick event invite video or upload a one Add a unique (!WOWTAG)title(Catchword or Pharse)to help you event attendee to quickly access and RSVP for your event Add your Event Venue,Event Time,Event Date and publish and send instant invitation link to all your contacts on your mobile devices.</string>
    <string name="watchvideo">Watch Video</string>
    <string name="generalhints">Create a quick event invite video or upload a one Add a unique (!WOWTAG)title(Catchword or Pharse)to help you event attendee to quickly access and RSVP for your event Add your Event Venue,Event Time,Event Date Add Event Schedule Add Event highlights Add Event Contacts and Donations and Registry.</string>
    <string name="shareyourthoughts">Share Your Thoughts</string>
    <string name="whatsonyourmind">Whats on your mind..</string>
    <string name="quickevents">Quick Event</string>
    <string name="wow">!Wowtag is a catch word or phrase that uniquely identifies your events on the wowhubb network, !Wowtag can be used to advertise and promote your event to your audience to make it more effective create and attach a 20 to 60 seconds invite video to your wowtag title or event catch word.</string>
    <string name="previous">←</string>
    <string name="forward">→</string>
    <string name="choose_thumbnail">Choose a thumbnail</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="failed_preview">Preview failed.\nClick to dismiss.</string>
    <string name="enter_title">Enter a title</string>
    <string name="enter_description">Enter a description</string>
    <string name="url"><u>url</u></string>
    <string name="foodbev"><![CDATA[Food & Beverages]]></string>
    <string name="group_members">Group Members</string>
    <string name="todayevents">Today Events</string>
    <string name="rsvpinvites">Rsvp Invites</string>
    <string name="versionname">Version:1.3</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="guestspeaker">Guest Speaker</string>
    <string name="htmlFormattedText">Hi There!\n Please download the wowhubb app from<a href="https://play.google.com/store/apps/details?id=vineture.wowhubb"></a>\n\n\n Thankk You\n Wowhubb Team</string>
</resources>