<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/backtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notifications"
            android:padding="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/back_arrow"
            android:textColor="@color/textcolr"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/emailnotification"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/phone"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventfeed_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/eventfeed"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/group_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/group"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coupons_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/coupons"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newtwork_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_bg_color"
                android:drawablePadding="@dimen/_6sdp"
                android:drawableRight="@drawable/right_arrow_gray"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/network"
                android:textColor="@drawable/tab_text_color"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:paddingLeft="@dimen/_5sdp" />
        </LinearLayout>






    </LinearLayout>

</LinearLayout>